# Fin-Maestro-Kin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  redis.conf  shutdown.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml
fin-maestro-kin/modules/data_toolkit/: __init__.py
fin-maestro-kin/modules/trend_detector/: trend_detector.py
fin_maestro_kin/: constants.py  main.py
fin_maestro_kin/modules/data_toolkit/nse/: helper.py  nse_equities.py  nse_indices.py  nse_operations.py
fin_maestro_kin/modules/data_toolkit/screener/: helper.py  screener_equities.py
fin_maestro_kin/modules/sentiment_analysis/: pcr_data.py  sentiment_analysis.py
fin_maestro_kin/modules/trend_detector/: trend_detector.py
fin_maestro_kin/modules/valuation_determiner/: valuations.py
modules/data_toolkit/nse/: equities_security_archives.py  nifty_indices.py
modules/sentiment_analysis/: sentiment_analysis.py
test/: test_endpoints.py
tests/: test_endpoints.py
