[tool.poetry]
name = "fin-maestro-kin"
version = "0.1.0"
description = "FastAPI for Fin-Maestro: Empowering traders & investors with advanced research tools and real-time sentiment analysis."
authors = ["DEV_FINWIZ <devjuneja43@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
requests = "^2.31.0"
yfinance = "^0.2.35"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
