[tool.poetry]
name = "fin-maestro-kin"
version = "0.2.5"
description = "Where Data Meets FastAPI Brilliance with Fin-Maestro-Kin – Your All-in-One Finance API."
authors = ["DEV_FINWIZ <devjuneja43@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
requests = "^2.31.0"
yfinance = "^0.2.35"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
